--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <nav class="nav-main">
-            <img src="img/Blampert.png" alt="UNAN-Logo" class="nav-logo">
+            <img src="img/logo-plumaN.png" alt="UNAN-Logo" class="nav-logo">
             <ul class="nav-menu">
                 <li>
                     <a href="">Inicio</a>
