--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <h1>Ultimas Noticias</h1>
     <div class="container">
         <nav class="nav-main">
             <img src="img/logo-plumaN.png" alt="UNAN-Logo" class="nav-logo">
