Adding heropatterns bakcground and body information

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
                 <img src="img/Logo/logo-plumaN.png" alt="UNAN-Logo" class="nav-logo">
                 <ul class="nav-menu">
                     <li>
-                        <a href="">Novedades</a>
+                        <a href="#"><H3>Novedades</H3> Novedades</a>
                     </li>
                     <li>
-                        <a href="">Dirección</a>
+                        <a href="#"><H3>Dirección</H3></a>
                     </li>
                     <li>
-                        <a href="">Ofertas</a>
+                        <a href="#"><H3>Ofertas</H3></a>
                     </li>
                     <li> 
-                        <a href="">Laptop/PC</a>
+                        <a href="#"><H3>Laptop/PC</H3></a>
                     </li>
                     <li>
-                        <a href="">Partes/Hardware</a>
+                        <a href="#"><H3>Partes/Hardware</H3>/a>
                     </li>
                     <li>
-                        <a href="">Soluciones</a>
+                        <a href="#"><H3>Soluciones</H3></a>
                     </li>   
                 </ul>
                 <ul class="nav-menu-r">
@@ -68,6 +68,53 @@
             <li><img src="img/4.png" alt=""></li>
         </ul>
     </div>
+    <!-- Columns -->
+    <h2>Acerca de Nosotros</h2>
+    <div class="columns">
+
+        <div>
+            <img src="https://img.icons8.com/flat_round/512/000000/info.png" alt="Mision">
+            <h3>Misión</h3>
+            <p>
+                En guimer shoes store nos esforzamos por atender con excelencia a las expectativas, 
+                deseos y sueños de nuestros clientes, con trabajadores motivados y satisfechos, 
+                generando resultados en forma sostenible.
+            </p>
+            <a href="#">Ver más<i class="fas fa-angle-double-right"></i></a>
+        </div>
+
+        <div>
+            <img src="Imagenes/vision.png" alt="Vision">
+            <h3>Visión</h3>
+            <p> Ser la empresa número 1 en distribución de calzados femeninos, con marcas admiradas y preferidas entre los consumidores a nivel mundial.</p>
+            <a href="#">Ver más<i class="fas fa-angle-double-right"></i></a>
+        </div>
+
+        <div>
+            <img src="Imagenes/mision.png" alt="Descripcion">
+            <h3>Acerca de Nosotros</h3>
+            <p> Somos especialistas en el calzado femenino y actuamos de forma única en el segmento ya que poseemos un legítimo dominio en todas las dimensiones que abarca nuestro negocio de la industria al por mayor y menor.</p>
+            <a href="#">Ver más<i class="fas fa-angle-double-right"></i></a>
+        </div>
+    </div>
+
+    <section class="GaleryBanner">
+        <div class="content">
+            <h2>
+                Galería de Productos
+            </h2>
+
+            <div class="GaleryOp">
+                <div class="SubGalery">
+                    <a href="#"><img src="Imagenes/girl.jpg" alt="girl"><h3>Niñas</h3></a>
+                </div>
+                <div class="SubGalery">
+                    <a href="#"><img src="Imagenes/woman.jpg" alt="woman"><h3>Mujeres</h3></a>
+                </div>
+            </div>
+            <a href="#"> Ver más <i class="fas fa-angle-double-right"></i></a>
+        </div>
+    </section>
 
     <script>
         $(document).ready(function(){
@@ -94,5 +141,6 @@
                 });
         });
       </script>   
-</body>
+
+    </body>
 </html>
