pie de pagina y nuevo logo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Slider-->
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
@@ -22,7 +23,7 @@
     <header>
         <div class="container">
             <nav class="nav-main">
-                <img src="img/Logo/logo-plumaN.png" alt="UNAN-Logo" class="nav-logo">
+                <img src="img/Logo/logo.png" alt="UNAN-Logo" class="nav-logo">
                 <ul class="nav-menu">
                     <li>
                         <a href="#"><H3>Novedades</H3> Novedades</a>
@@ -53,7 +54,7 @@
             </nav>
         </div>
     </header>
-
+<hr>
     <div class="slider">
         <ul class="slider1">
             <li><img src="img/1.png" alt=""></li>
@@ -68,6 +69,7 @@
             <li><img src="img/4.png" alt=""></li>
         </ul>
     </div>
+    <hr>
     <!-- Columns -->
     <h2>Acerca de Nosotros</h2>
     <div class="columns">
@@ -97,7 +99,7 @@
             <a href="#">Ver más<i class="fas fa-angle-double-right"></i></a>
         </div>
     </div>
-
+<hr>
     <section class="GaleryBanner">
         <div class="content">
             <h2>
@@ -143,4 +145,51 @@
       </script>   
 
     </body>
+<hr>
+    <footer>
+        <div class="banner-wrapper">
+          <div class="icon-text">
+            <div class="icon-text-icon">
+              <ul class="footer-nav">
+                <li>
+                  <a href="">Buscanos en: </a>
+                </li>
+              </ul>
+            </div>
+            <div class="icon-text-text">
+              <ul class="social">
+                <li>
+                  <a href="Blampert@Corp.com">
+                    <i class="fa fa-envelope-o"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.facebook.com/">
+                    <i class="fa fa-facebook"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/?lang=es">
+                    <i class="fa fa-twitter"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.youtube.com/">
+                    <i class="fa fa-youtube"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/?hl=es">
+                    <i class="fa fa-instagram"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <footer class="second-footer">
+          &copy; <a href="#">Blampert</a>
+
+      </footer>
 </html>
