--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="#"><H3>Laptop/PC</H3></a>
                     </li>
                     <li>
-                        <a href="#"><H3>Partes/Hardware</H3>/a>
+                        <a href="#"><H3>Accesorios</H3>/a>
                     </li>
                     <li>
                         <a href="#"><H3>Soluciones</H3></a>
